--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Title</title>
     </head>
     <body>
-        <h1>¡Hola mundo!</h1>
+        <div class="jumbotron">
+            <h1>José Javier Meiriño Migens</h1>
+        </div>
     </body>
 </html>
