--- a/index.html
+++ b/index.html
@@ -3,11 +3,54 @@
     <head>
         <meta charset="UTF-8">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+        <link href="css/main.css" rel="stylesheet">
         <title>Title</title>
     </head>
     <body>
-        <div class="jumbotron">
-            <h1>José Javier Meiriño Migens</h1>
+        <div class="container-fluid">
+            <div class="jumbotron">
+                <div class="center">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <img src="http://via.placeholder.com/300" class="text-center img-fluid rounded-circle avatar">
+                            <h1 class="text-center">José Javier Meiriño Migens</h1>
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h3 class="text-center">About me</h3>
+                            <p>
+                                En un lugar de la Mancha, de cuyo nombre no quiero acordarme, no ha mucho tiempo que vivía un hidalgo de los de lanza en astillero, adarga antigua, rocín flaco y galgo corredor.
+                            </p>
+                            <p>
+                                Una olla de algo más vaca que carnero, salpicón las más noches, duelos y quebrantos los sábados, lantejas los viernes, algún palomino de añadidura los domingos, consumían las tres partes de su hacienda.
+                            </p>
+                        </div>
+                        <div class="col-md-4">
+                            <h3 class="text-center">Bio</h3>
+                            <ul>
+                                <li>Birth date: 06/12/1994</li>
+                                <li>Location: Getafe (Madrid, España)</li>
+                                <li>Phone number: (+34) 608 20 00 22</li>
+                                <li>Email: jjmeiras@gmail.com</li>
+                                <li>Lenguages: Spanish (native), English (B2)</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-4">
+                            <h3 class="text-center">Likes</h3>
+                            <p>
+                                En un lugar de la Mancha, de cuyo nombre no quiero acordarme, no ha mucho tiempo que vivía un hidalgo de los de lanza en astillero, adarga antigua, rocín flaco y galgo corredor.
+                            </p>
+                            <p>
+                                Una olla de algo más vaca que carnero, salpicón las más noches, duelos y quebrantos los sábados, lantejas los viernes, algún palomino de añadidura los domingos, consumían las tres partes de su hacienda.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
